second commit: corection background and added margin for hr

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header>
         <div >
-            <img src="./img/Bella Olonje logo 111 1.svg" alt="">
+            <img class="logo" src="./img/Bella Olonje logo 111 1.svg" alt="">
         </div>
         <menu>
             <a href="#">Home</a>
@@ -23,6 +23,7 @@
     <main>
         <!-- Block Hero -> elements: title, text, description  -->
         <section class="hero">
+            <div class="hero__start--img"></div>
             <p class="hero__text">Food app</p>
             <h1 class="hero__title">Why stay hungry when <br>
                 you can order form Bella Onojie
